--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- Hero Section -->
     <section id="hero">
         <div class="hero-text">
-            <h1>Emma & John</h1>
-            <p>Join us for a Viking Wedding on September 25th, 2024</p>
+            <h1>Marta & Víctor</h1>
+            <p>Acompáñanos en un día para el recuerdo</p>
         </div>
     </section>
 
